cmake_minimum_required(VERSION 3.21)
project(Lecture13Examples)

set(CMAKE_CXX_STANDARD 14)

add_executable(01Hello 01Hello.cpp)
add_executable(02getLine 02getLine.cpp)
add_executable(03get 03get.cpp)
add_executable(04getLine2 04getLine2.cpp)
add_executable(05StringArrays 05StringArrays.cpp)
add_executable(06Palindrome 06Palindrome.cpp)
add_executable(07Vectors 07Vectors.cpp)
add_executable(082DVectors 082DVectors.cpp)

